base.css
#banner {
  background-color: #0A254E;
  color: white;
  width: 100%;
  padding-top: 20px;
  padding-bottom: 20px;
  margin:0px;
  left: 0px;
  right: 0px;
  top: 0px;
}

#banner h1 {
  text-align: center;
}

#banner h4 {
  text-align: center;
}

#content {
  //background-color: ;
}
code {
  white-space: pre;
}

#jules {
  font-size: 1em;
}
a {
	coler: white;
}
nav a {margin-left:25px;
	margin-right:30px;
	border-radius: 20px;
	background-color: cornflowerblue;
	color: white;
}
body {
	background-color: lightgrey;
	margin:0;
}
body * {
	margin-left:16px;
	margin-right:16px;
	left: 16px;
	right: 16px;
	
}
body * * {
	width: auto;
	//margin-left:auto;
	//margin-right:auto;
	 
    
}
body code {
	display: inline-block;
	margin-left:64px;
}
p code {
	display: auto;
	margin-left:0px;
}

